<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kora 24</string>
    <string name="main">الرئيسية</string>
    <string name="last_news">اخر الاخبار</string>
    <string name="fixtures">جدول المباريات</string>
    <string name="all_tournaments">كافة البطولات</string>
    <string name="favorite">المفضلة</string>
    <string name="notifications">الاشعارات</string>
    <string name="settings">الاعدادات</string>
    <string name="login">تسجيل الدخول</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="night_mode">الوضع الليلى</string>
    <string name="matches_reminder">تذكير بالمباريات</string>
    <string name="activate_notification">تفعيل الاشعارات</string>
    <string name="mute_notification">كتم صوت الاشعارات</string>
    <string name="mute_news_notification">كتم صوت اشعارات الاخبار</string>
    <string name="notification_sound">صوت الاشعار</string>
    <string name="share">شارك</string>
    <string name="type_comment">اكتب تعليقك هنا ...</string>
    <string name="show_all_comments">عرض كافة التعليقات</string>
    <string name="reply">رد</string>
    <string name="today_matches">مباريات اليوم</string>
    <string name="all_matches">كل الماتشات</string>
    <string name="live">مباشر</string>
    <string name="most_watched">الاكثر مشاهدة</string>
    <string name="your_favorite">مفضلتك</string>
    <string name="all_bands">كل الفرق</string>
    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="dont_has_account">ليس لديك حساب ؟ انشئ حسابا</string>
    <string name="facebook_app_id">1159350894400348</string>
    <string name="fb_login_protocol_scheme">fb1159350894400348</string>
    <string name="google_login">تسجيل بواسطة جوجل</string>
    <string name="login_success">تم تسجيل الدخول بنجاح</string>
    <string name="logout">تسجيل خروج</string>
    <string name="error_not_valid">تأكد من إدخال البريد الإلكتروني  أو كلمة المرور الصحيحة</string>
    <string name="error_message_empty">لايمكن ان يكون فارغا</string>
    <string name="error_password"> كلمة المرور لا تقل عن 6 أحرف</string>
    <string name="facebook_login">تسجيل بحساب الفيس بوك</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="register">تسجيل جديد</string>
    <string name="have_account">هل لديك حساب ؟ تسجيل دخول</string>
    <string name="register_success">تم التسجيل بنجاح</string>
    <string name="logout_success">تم تسجيل الخروج بنجاح</string>
    <string name="today">اليوم</string>
    <string name="no_notifications">لا يوجد اشعارات</string>
    <string name="add_comment_login_message">عزيزي المستخدم يجب عليك تسجيل الدخول لكي تتمكن من اضافة تعليق</string>
    <string name="add_comment_login_title">اضافة تعليق جديد</string>
    <string name="cancel">الغاء</string>
    <string name="logout_confirm">هل تريد تسجيل الخروج ؟</string>
    <string name="yes">نعم</string>
    <string name="end">انتهت</string>
    <string name="match_info">معلومات اللقاء</string>
    <string name="try_again">حدث خطأ !! من فضلك حاول مرة اخري</string>
    <string name="add_user_image">اضف صورة</string>
    <string name="error_photo_empty">من فضلك قم باختيار صورة!!</string>
    <string name="admin">الدخول كادمن</string>
    <string name="admin_"> الادمن</string>
    <string name="user">الدخول كمستخدم</string>
    <string name="add_news">اضافة خبر</string>
    <string name="add_news_title">عنوان الخبر</string>
    <string name="add_news_content">محتوى الخبر</string>
    <string name="add_news_date">تارخ الخبر</string>
    <string name="select_news_date">اختار تارخ</string>
    <string name="add_news_success">تم اضافة الخبر بنجاح</string>
    <string name="user_not_found">هذا الايميل غير موجود</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="add_compitation">اضافة بطولة</string>
    <string name="add_compitation_title">اسم البطولة</string>
    <string name="add_compitation_success">تم اضافة البطوله بنجاح</string>
    <string name="add_to_favorite">تم اضافتها للمفضلة بنجاح</string>
    <string name="remove_from_favorite">تم حذفها من المفضلة بنجاح</string>
    <string name="add_game">اضافة مبارة</string>
    <string name="game"> مبارة</string>
    <string name="add_game_tv_channel">القناه الناقلة</string>
    <string name="add_game_commentor">المعلق</string>
    <string name="add_game_date">تاريخ المباراة</string>
    <string name="add_game_time">وقت المباراة</string>
    <string name="add_game_stage">الجولة</string>
    <string name="add_game_stadium">ملعب المباراة</string>
    <string name="error_select">يجب اختيار</string>
    <string name="add_game_season">الموسم</string>
    <string name="home_team">الفريق الاول</string>
    <string name="away_team">الفريق الاخر</string>
    <string name="default_notification_channel_id">KORA_CHANNEL_ID</string>
    <string name="home_team_result">نتيجه الفريق الاول</string>
    <string name="away_team_result">نتيجه الفريق الاخر</string>
    <string name="update_home_team">تحديث نتيجة الفريق الاول</string>
    <string name="update_away_team">تحديث نتيجة الفريق الاخر</string>
    <string name="update_result">تحديث نتيجة المباراة</string>
    <string name="update_result_success">تم تحديث نتيجة المباراة بنجاح</string>
    <string name="add_season">اضافة موسم</string>
    <string name="add_season_success">تم اضافة الموسم بنجاح</string>
    <string name="country">الدولة</string>
    <string name="add_team">اضافة فريق</string>
    <string name="add_team_title">الفريق</string>
    <string name="add_team_success">تم اضافة فريق بنجاح</string>
    <string name="add_news_in_compitation">اضافة خبر للبطولة</string>
    <string name="add_season_title">الموسم</string>
    <string name="add_comment_success">تم اضافة تعليق بنجاح</string>
    <string name="add_country_title">البلد</string>
    <string name="add_country">اضافة بلد</string>
    <string name="add_country_success">تم اضافة البلد بنجاح</string>
    <string name="no_games_today">لا توجد مباريات اليوم</string>
    <string name="add_game_success">تم اضافة المباراة بنجاح</string>
    <string name="type_reply">اضف رد</string>
    <string name="more_replaies"><u>عرض كل الردود</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_reply_success">تم اضافة الرد بنجاح</string>
    <string name="search_empty">غير موجود</string>
    <string name="no_favorites">لا يوجد فرق مفضلة</string>


</resources>