<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bukra"
            android:text="@string/add_comment_login_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/bukra"
            android:lineSpacingExtra="8dp"
            android:text="@string/add_comment_login_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/bukra"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/bukra"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>