<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.rehammetwally.kora24.models.User" />
    </data>

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/splash_bg"
            android:gravity="center"
            android:scaleX="3" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:alpha="0.94"
            android:background="@color/colorAlpha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp"
            tools:context=".views.AdminActivity">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:src="@drawable/admin" />


            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/white"
                android:fontFamily="@font/bukra"
                android:gravity="right"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="13sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGray" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/white"
                android:fontFamily="@font/bukra"
                android:gravity="right"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="13sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_bg"
                android:fontFamily="@font/bukra"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="13sp" />
        </LinearLayout>

    </RelativeLayout>
</layout>